# AnatomyOfFlow

./: .gitignore  env.template  pyproject.toml
.config/: example_oura.json  example_waka.json
notebooks/: attentional_timeline.ipynb  compare_window_focus.ipynb  scratch.ipynb
src/: atuin_handler.py  aw_merge.py  oura_handler.py  user_events.py  wakatime_handler.py
